--- a/index.html
+++ b/index.html
@@ -16,23 +16,41 @@
         <p>
         <h1> Anna Victoria Breeze </h1>
         </p>
-        <p><em> Architecture Student and Founder and CEO of <strong><a href="https://arxiv.org/abs/1802.02231">somethingrather</a></strong>. </em></p>
-        <p> I &#128420; cats and learning new things. </p>
+        <p><em> Architecture Student </em></p>
+        <p> I &#128420; cats and experimental Art and Architecture. </p>
       </td>
     </tr>
   </table>
   <hr size "3" noshade />
-  <h3>Education</h3>
-  <ul>
-    <li>Nuestra Señora del Huerto <em>2006-2019</em></li>
-    <li>Universidad de Navarra <em>2019-2024</em></li>
-  </ul>
+
+  <table cellspacing="20">
+    <thead>
+      <tr>
+        <th><h3>Education</h3></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2017-2019</td>
+        <td>Bachiller at <em>Nuestra Señora del Huerto</em></td>
+      </tr>
+      <tr>
+        <td>2019-2024</td>
+        <td>Architecture degree at <em>University of Navarre</em> </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <br />
 
   <hr size "3" noshade />
 
-  <h3>Work experience</h3>
   <table cellspacing="20">
     <thead>
+      <tr>
+        <th><h3>Work Experience</h3></th>
+      </tr>
+      <br />
       <tr>
         <th>Dates</th>
         <th>Possition</th>
@@ -40,29 +58,35 @@
     </thead>
     <tbody>
       <tr>
-        <td>2010</td>
-        <td>Web Developer at <em>Facebook</em></td>
+        <td>2019</td>
+        <td>Cambridge exam invigilator at <em>University of Navarre's Instituto de Idiomas</em></td>
       </tr>
       <tr>
-        <td>2010-2013</td>
-        <td>Social Media analyst at <em>Marc Jacobs</em> </td>
+        <td>2019-2020</td>
+        <td>English speaking Babysitter for a <em>Private Household</em> </td>
       </tr>
     </tbody>
   </table>
 
+<br />
+
   <hr size "3" noshade />
 
-  <h3>Skills</h3>
   <table cellspacing="20">
+    <thead>
+      <tr>
+        <th> <h3>Skills</h3></th>
+      </tr>
+    </thead>
     <tbody>
       <tr>
         <td>Rhinoceros</td>
         <td>&#9733; &#9733; &#9733; &#9733; &#9734;</td>
         <td>Photography</td>
-        <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>      </tr>
+        <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>      </tr>
       <tr>
         <td>Photoshop, Adobe programs </td>
-        <td> &#9733; &#9733; &#9733; &#9734; &#9734;</td>
+        <td> &#9733; &#9733; &#9734; &#9734; &#9734;</td>
         <td>Web Development</td>
         <td>&#9733; &#9734; &#9734; &#9734; &#9734;</td>
       </tr>
