--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
 <br />
 
   <ol type="i">
-    <li>Rue des avions, 36 6B (Biarritz, France)</li>
-    <li>+64 985678956</li>
-    <li>anna@gmail.com</li>
+    <li>Pamplona, Spain</li>
+    <li>+64 abc def ghi</li>
+    <li>anvibreeze@gmail.com</li>
   </ol>
 
 <br />
@@ -40,24 +40,24 @@
     <form class="" action="mailto:anvibreeze@gmail.com" method="post" enctype="text/plain">
 
       <tr>
-        <td><label> Your name: </label></td>
-        <td><input type="Text" name="yourname" value=""></td>
+        <td><label> Your Name: </label></td>
+        <td><input type="Text" name="Your Name" value=""></td>
       </tr>
 
       <br>
       <br>
 
       <tr>
-        <td><label>Your e-mail</label></td>
-        <td><input type="email" name="youremail" value=""></td>
+        <td><label>Your E-mail</label></td>
+        <td><input type="email" name="Your e-mail" value=""></td>
       </tr>
 
       <br>
       <br>
 
       <tr>
-        <td><label>Your message:</label></td>
-        <td><textarea name="yourmessage" rows="1" cols="20"></textarea></td>
+        <td><label>Your Message:</label></td>
+        <td><textarea name="Your Message" rows="1" cols="20"></textarea></td>
       </tr>
 
       <br>
@@ -78,6 +78,7 @@
     </form>
     </tbody>
   </table>
+
 
 </body>
 
